@@ -1,13 +1,9 @@
-
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.031.
 use strict;
 use warnings;
 
 use 5.008001;
 
 use ExtUtils::MakeMaker 6.17;
-
-
 
 my %WriteMakefileArgs = (
   "ABSTRACT" => "Dist::Zilla configuration the way DAGOLDEN does it",
@@ -29,7 +25,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
     "Dist::Zilla::Plugin::CheckMetaResources" => "0.001",
     "Dist::Zilla::Plugin::CheckPrereqsIndexed" => "0.002",
-    "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
+    "Dist::Zilla::Plugin::CopyFilesFromBuild::Filtered" => 0,
     "Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch" => 0,
     "Dist::Zilla::Plugin::Git::Contributors" => "0.007",
     "Dist::Zilla::Plugin::Git::NextVersion" => 0,
@@ -95,7 +91,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
   "Dist::Zilla::Plugin::CheckMetaResources" => "0.001",
   "Dist::Zilla::Plugin::CheckPrereqsIndexed" => "0.002",
-  "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
+  "Dist::Zilla::Plugin::CopyFilesFromBuild::Filtered" => 0,
   "Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch" => 0,
   "Dist::Zilla::Plugin::Git::Contributors" => "0.007",
   "Dist::Zilla::Plugin::Git::NextVersion" => 0,
@@ -155,6 +151,3 @@ delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
   unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
 
 WriteMakefile(%WriteMakefileArgs);
-
-
-
