@@ -2,6 +2,12 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    [CHANGED]
+
+    - Swapped in CopyFilesFromBuild::Filtered for the unfiltered version.
+      This gets rid of "generated by" lines in Makefile.PL that cause
+      unnecessary file churn as Dist::Zilla is upgraded.
+
 0.074     2015-01-22 17:07:41-05:00 America/New_York
 
     [CHANGED]
